// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files 1`] = `
Array [
  "class-diagram.html",
  "class-diagram.md",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files 2`] = `
Array [
  "class-diagram.html",
  "class-diagram.md",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: class-diagram.html 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <title>Mermaid Class Diagram - by openapi-mermaid</title>
    <meta content=\\"text/html; charset=utf-8\\" />
    <script src=\\"https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js\\"></script>
    <script>mermaid.initialize({startOnLoad:true});</script>
  </head>
  <body>
    <div class=\\"mermaid\\">
classDiagram

  SiteCollection ..> Building
  SiteCollection ..> Site
  Tag ..> UnitTag
  UnitTag ..> Tag
  UnitTag ..> Unit
  Unit ..> Building
  Unit ..> Site
  Unit ..> UnitType
  Unit ..> UnitTag
  Site ..> SiteCollection
  Site ..> Building
  Site ..> Unit
  Building ..> Site
  Building ..> Unit

  class SiteCollection{
    +uuid: id
    +string: tenantId
    +string: number
    +string: name
    +string: code
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +bool: isSchedulerEnabled
    +number: siteCount
    +string | number: workCategoryTypes
    +Building[]: buildings;
    +Site[]: sites;
  }
  class UnitType{
    +uuid: id
    +string: code
    +string: description
  }
  class Tag{
    +uuid: id
    +string: name
    +string: value
    +UnitTag[]: unitTags;
  }
  class UnitTag{
    +uuid: id
    +uuid: unitId
    +uuid: tagId
    +string: value
    +Tag: tag;
    +Unit: unit;
  }
  class Unit{
    +uuid: id
    +string: number
    +uuid: unitTypeId
    +uuid: siteId
    +uuid: buildingId
    +bool: isEnabled
    +Building: building;
    +Site: site;
    +UnitType: unitType;
    +UnitTag[]: unitTags;
  }
  class Site{
    +uuid: id
    +string: tenantId
    +uuid: accountId
    +string: accountName
    +uuid: siteCollectionId
    +string: number
    +string: name
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +bool: isEnabled
    +SiteCollection: siteCollection;
    +Building[]: buildings;
    +Unit[]: units;
  }
  class Building{
    +uuid: id
    +uuid: siteId
    +string: identifier
    +bool: isEnabled
    +Site: site;
    +Unit[]: units;
  }
    </div>
    <div style=\\"font-family: Arial, Helvetica, sans-serif; font-size: small;\\">
      This file was generated by the <a href=\\"https://www.npmjs.com/package/openapi-mermaid\\">openapi-mermaid</a> tool.
    </div>
  </body>

  </body>
</html>
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: class-diagram.md 1`] = `
"\`\`\`mermaid
classDiagram

  SiteCollection ..> Building
  SiteCollection ..> Site
  Tag ..> UnitTag
  UnitTag ..> Tag
  UnitTag ..> Unit
  Unit ..> Building
  Unit ..> Site
  Unit ..> UnitType
  Unit ..> UnitTag
  Site ..> SiteCollection
  Site ..> Building
  Site ..> Unit
  Building ..> Site
  Building ..> Unit

  class SiteCollection{
    +uuid: id
    +string: tenantId
    +string: number
    +string: name
    +string: code
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +bool: isSchedulerEnabled
    +number: siteCount
    +string | number: workCategoryTypes
    +Building[]: buildings;
    +Site[]: sites;
  }
  class UnitType{
    +uuid: id
    +string: code
    +string: description
  }
  class Tag{
    +uuid: id
    +string: name
    +string: value
    +UnitTag[]: unitTags;
  }
  class UnitTag{
    +uuid: id
    +uuid: unitId
    +uuid: tagId
    +string: value
    +Tag: tag;
    +Unit: unit;
  }
  class Unit{
    +uuid: id
    +string: number
    +uuid: unitTypeId
    +uuid: siteId
    +uuid: buildingId
    +bool: isEnabled
    +Building: building;
    +Site: site;
    +UnitType: unitType;
    +UnitTag[]: unitTags;
  }
  class Site{
    +uuid: id
    +string: tenantId
    +uuid: accountId
    +string: accountName
    +uuid: siteCollectionId
    +string: number
    +string: name
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +bool: isEnabled
    +SiteCollection: siteCollection;
    +Building[]: buildings;
    +Unit[]: units;
  }
  class Building{
    +uuid: id
    +uuid: siteId
    +string: identifier
    +bool: isEnabled
    +Site: site;
    +Unit[]: units;
  }
\`\`\`
This file was generated by the [openapi-mermaid](https://www.npmjs.com/package/openapi-mermaid) tool.
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files 1`] = `
Array [
  "class-diagram.html",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: class-diagram.html 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <title>Mermaid Class Diagram - by openapi-mermaid</title>
    <meta content=\\"text/html; charset=utf-8\\" />
    <script src=\\"https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js\\"></script>
    <script>mermaid.initialize({startOnLoad:true});</script>
  </head>
  <body>
    <div class=\\"mermaid\\">
classDiagram

  SiteCollection ..> Building
  SiteCollection ..> Site
  Tag ..> UnitTag
  UnitTag ..> Tag
  UnitTag ..> Unit
  Unit ..> Building
  Unit ..> Site
  Unit ..> UnitType
  Unit ..> UnitTag
  Site ..> SiteCollection
  Site ..> Building
  Site ..> Unit
  Building ..> Site
  Building ..> Unit

  class SiteCollection{
    +uuid: id
    +string: tenantId
    +string: number
    +string: name
    +string: code
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +bool: isSchedulerEnabled
    +number: siteCount
    +string | number: workCategoryTypes
    +Building[]: buildings;
    +Site[]: sites;
  }
  class UnitType{
    +uuid: id
    +string: code
    +string: description
  }
  class Tag{
    +uuid: id
    +string: name
    +string: value
    +UnitTag[]: unitTags;
  }
  class UnitTag{
    +uuid: id
    +uuid: unitId
    +uuid: tagId
    +string: value
    +Tag: tag;
    +Unit: unit;
  }
  class Unit{
    +uuid: id
    +string: number
    +uuid: unitTypeId
    +uuid: siteId
    +uuid: buildingId
    +bool: isEnabled
    +Building: building;
    +Site: site;
    +UnitType: unitType;
    +UnitTag[]: unitTags;
  }
  class Site{
    +uuid: id
    +string: tenantId
    +uuid: accountId
    +string: accountName
    +uuid: siteCollectionId
    +string: number
    +string: name
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +bool: isEnabled
    +SiteCollection: siteCollection;
    +Building[]: buildings;
    +Unit[]: units;
  }
  class Building{
    +uuid: id
    +uuid: siteId
    +string: identifier
    +bool: isEnabled
    +Site: site;
    +Unit[]: units;
  }
    </div>
    <div style=\\"font-family: Arial, Helvetica, sans-serif; font-size: small;\\">
      This file was generated by the <a href=\\"https://www.npmjs.com/package/openapi-mermaid\\">openapi-mermaid</a> tool.
    </div>
  </body>

  </body>
</html>
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files 1`] = `
Array [
  "class-diagram.html",
  "class-diagram.md",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files 2`] = `
Array [
  "class-diagram.html",
  "class-diagram.md",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: class-diagram.html 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <title>Mermaid Class Diagram - by openapi-mermaid</title>
    <meta content=\\"text/html; charset=utf-8\\" />
    <script src=\\"https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js\\"></script>
    <script>mermaid.initialize({startOnLoad:true});</script>
  </head>
  <body>
    <div class=\\"mermaid\\">
classDiagram

  SiteCollection ..> Building
  SiteCollection ..> Site
  Tag ..> UnitTag
  UnitTag ..> Tag
  UnitTag ..> Unit
  Unit ..> Building
  Unit ..> Site
  Unit ..> UnitType
  Unit ..> UnitTag
  Site ..> SiteCollection
  Site ..> Building
  Site ..> Unit
  Building ..> Site
  Building ..> Unit

  class SiteCollection{
    +uuid: id
    +string: tenantId
    +string: number
    +string: name
    +string: code
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +bool: isSchedulerEnabled
    +number: siteCount
    +string | number: workCategoryTypes
    +Building[]: buildings;
    +Site[]: sites;
  }
  class UnitType{
    +uuid: id
    +string: code
    +string: description
  }
  class Tag{
    +uuid: id
    +string: name
    +string: value
    +UnitTag[]: unitTags;
  }
  class UnitTag{
    +uuid: id
    +uuid: unitId
    +uuid: tagId
    +string: value
    +Tag: tag;
    +Unit: unit;
  }
  class Unit{
    +uuid: id
    +string: number
    +uuid: unitTypeId
    +uuid: siteId
    +uuid: buildingId
    +bool: isEnabled
    +Building: building;
    +Site: site;
    +UnitType: unitType;
    +UnitTag[]: unitTags;
  }
  class Site{
    +uuid: id
    +string: tenantId
    +uuid: accountId
    +string: accountName
    +uuid: siteCollectionId
    +string: number
    +string: name
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +bool: isEnabled
    +SiteCollection: siteCollection;
    +Building[]: buildings;
    +Unit[]: units;
  }
  class Building{
    +uuid: id
    +uuid: siteId
    +string: identifier
    +bool: isEnabled
    +Site: site;
    +Unit[]: units;
  }
    </div>
    <div style=\\"font-family: Arial, Helvetica, sans-serif; font-size: small;\\">
      This file was generated by the <a href=\\"https://www.npmjs.com/package/openapi-mermaid\\">openapi-mermaid</a> tool.
    </div>
  </body>

  </body>
</html>
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: class-diagram.md 1`] = `
"\`\`\`mermaid
classDiagram

  SiteCollection ..> Building
  SiteCollection ..> Site
  Tag ..> UnitTag
  UnitTag ..> Tag
  UnitTag ..> Unit
  Unit ..> Building
  Unit ..> Site
  Unit ..> UnitType
  Unit ..> UnitTag
  Site ..> SiteCollection
  Site ..> Building
  Site ..> Unit
  Building ..> Site
  Building ..> Unit

  class SiteCollection{
    +uuid: id
    +string: tenantId
    +string: number
    +string: name
    +string: code
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +bool: isSchedulerEnabled
    +number: siteCount
    +string | number: workCategoryTypes
    +Building[]: buildings;
    +Site[]: sites;
  }
  class UnitType{
    +uuid: id
    +string: code
    +string: description
  }
  class Tag{
    +uuid: id
    +string: name
    +string: value
    +UnitTag[]: unitTags;
  }
  class UnitTag{
    +uuid: id
    +uuid: unitId
    +uuid: tagId
    +string: value
    +Tag: tag;
    +Unit: unit;
  }
  class Unit{
    +uuid: id
    +string: number
    +uuid: unitTypeId
    +uuid: siteId
    +uuid: buildingId
    +bool: isEnabled
    +Building: building;
    +Site: site;
    +UnitType: unitType;
    +UnitTag[]: unitTags;
  }
  class Site{
    +uuid: id
    +string: tenantId
    +uuid: accountId
    +string: accountName
    +uuid: siteCollectionId
    +string: number
    +string: name
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +bool: isEnabled
    +SiteCollection: siteCollection;
    +Building[]: buildings;
    +Unit[]: units;
  }
  class Building{
    +uuid: id
    +uuid: siteId
    +string: identifier
    +bool: isEnabled
    +Site: site;
    +Unit[]: units;
  }
\`\`\`
This file was generated by the [openapi-mermaid](https://www.npmjs.com/package/openapi-mermaid) tool.
"
`;
